--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="landing.css">
 </head>
 <body>
@@ -19,8 +25,9 @@
     </header>
 
     <section id="secao1">
-        <h1>Bem-vindo à nossa landing page!</h1>
+        <h1>Produção Musical</h1>
         <p>Descrição introdutória sobre o objetivo da página.</p>
+        <img src="img/producao.jpg" alt="mesinha de mixagem" width="400" height="800">
     </section>
 
     <section id="secao2">
